// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: pattern matching > match with literals and variable branches 1`] = `
{
  "alternatives": [
    {
      "pattern": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "term": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 10,
        },
      },
    },
    {
      "pattern": {
        "type": "var",
        "value": {
          "type": "name",
          "value": "y",
        },
      },
      "term": {
        "type": "lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
    },
  ],
  "scrutinee": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "x",
    },
  },
  "type": "match",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: pattern matching > match with structs 1`] = `
{
  "alternatives": [
    {
      "pattern": {
        "row": {
          "label": "x",
          "row": {
            "label": "y",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "type": "lit",
              "value": {
                "type": "Num",
                "value": 2,
              },
            },
          },
          "type": "extension",
          "value": {
            "type": "lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
        },
        "type": "struct",
      },
      "term": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 10,
        },
      },
    },
    {
      "pattern": {
        "row": {
          "label": "x",
          "row": {
            "label": "y",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "type": "lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "extension",
          "value": {
            "type": "lit",
            "value": {
              "type": "Num",
              "value": 2,
            },
          },
        },
        "type": "struct",
      },
      "term": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 20,
        },
      },
    },
  ],
  "scrutinee": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "x",
    },
  },
  "type": "match",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: pattern matching > match with variants 1`] = `
{
  "alternatives": [
    {
      "pattern": {
        "row": {
          "label": "x",
          "row": {
            "type": "empty",
          },
          "type": "extension",
          "value": {
            "type": "lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
        },
        "type": "variant",
      },
      "term": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 10,
        },
      },
    },
    {
      "pattern": {
        "row": {
          "label": "y",
          "row": {
            "type": "empty",
          },
          "type": "extension",
          "value": {
            "type": "lit",
            "value": {
              "type": "Num",
              "value": 2,
            },
          },
        },
        "type": "variant",
      },
      "term": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 20,
        },
      },
    },
  ],
  "scrutinee": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "x",
    },
  },
  "type": "match",
  Symbol(snapshot:stripped): true,
}
`;
